Configure JavaCompiler with --enable-preview