@@ -10,6 +10,10 @@ dependencies {
     implementation("org.junit.jupiter:junit-jupiter:5.8.1")
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
 tasks.test {
     useJUnitPlatform()
 }
